; ModuleID = '/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_menu.c_menu_get_help.c'
source_filename = "/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_menu.c_menu_get_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.menu = type { i8* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @menu_get_help(%struct.menu* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.menu*, align 8
  store %struct.menu* %0, %struct.menu** %3, align 8
  %4 = load %struct.menu*, %struct.menu** %3, align 8
  %5 = getelementptr inbounds %struct.menu, %struct.menu* %4, i32 0, i32 0
  %6 = load i8*, i8** %5, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.menu*, %struct.menu** %3, align 8
  %10 = getelementptr inbounds %struct.menu, %struct.menu* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  store i8* %11, i8** %2, align 8
  br label %13

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %13

13:                                               ; preds = %12, %8
  %14 = load i8*, i8** %2, align 8
  ret i8* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
